generated-parser/QwertyParser.js
// Generated from Qwerty.g4 by ANTLR 4.5.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var QwertyListener = require('./QwertyListener').QwertyListener;
var QwertyVisitor = require('./QwertyVisitor').QwertyVisitor;

var grammarFileName = "Qwerty.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, "'int'", "'float'", "'char'", "'string'", 
                     "'boolean'", "'if'", "'else if'", "'else'", "'for'", 
                     "'while'", "'do'", "'print'", "'println'", "'scan'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "';'", 
                     null, null, "'+'", "'-'", "'*'", "'/'", "'+='", "'-='", 
                     "'*='", "'/='", "'%='", "'%'", "'<'", "'<='", "'>'", 
                     "'>='", "'=='", "'!='", "'++'", "'--'", "'='", "'&&'", 
                     "'||'", "'!'", "'constant'", "'main'", "'return'", 
                     "'void'" ];

var symbolicNames = [ null, "HT_NL_CR", "INT", "FLOAT", "CHAR", "STRING", 
                      "BOOLEAN", "IF", "ELSE_IF", "ELSE", "FOR", "WHILE", 
                      "DO", "PRINT", "PRINTLN", "SCAN", "OPEN_PAR", "CLOSE_PAR", 
                      "OPEN_BRACE", "CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", 
                      "ENUMERATION", "END", "COMMENT", "LINE_COMMENT", "ADD", 
                      "SUB", "MUL", "DIV", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", 
                      "DIV_ASSIGN", "MOD_ASSIGN", "MOD", "LT", "LE", "GT", 
                      "GE", "EQUAL", "NOTEQUAL", "INC", "DEC", "ASSIGN", 
                      "AND", "OR", "NOT", "CONSTANT_KEYWORD", "MAIN_FUNC", 
                      "RETURN", "VOID", "INTEGER_LITERAL", "FLOAT_LITERAL", 
                      "CHAR_LITERAL", "STRING_LITERAL", "BOOLEAN_LITERAL", 
                      "VARIABLE_IDENTIFIER", "FUNCTION_IDENTIFIER", "OR_OPE" ];

var ruleNames =  [ "program", "statement", "vardecl_list", "var_decl", "var_identifier_list", 
                   "array_size", "data_type", "function_declaration", "function_return", 
                   "function_noreturn", "parameters", "function_block", 
                   "main_function", "expression", "string_expression", "num_expression", 
                   "num_ope", "unary_ope", "num_factor", "var_func_expression", 
                   "var_func_factor", "bool_expression", "relational_ope", 
                   "logical_ope", "const_statement", "var_assignment_statement", 
                   "assignment_statement", "assignment_num_ope", "assignment_factor", 
                   "funccall_statement", "actual_parameter_list", "actual_params", 
                   "conditional_factor", "if_statement", "conditional_block", 
                   "code_block", "while_statement", "do_while_statement", 
                   "for_statement", "return_statement", "scan_statement", 
                   "print_statement" ];

function QwertyParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

QwertyParser.prototype = Object.create(antlr4.Parser.prototype);
QwertyParser.prototype.constructor = QwertyParser;

Object.defineProperty(QwertyParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

QwertyParser.EOF = antlr4.Token.EOF;
QwertyParser.HT_NL_CR = 1;
QwertyParser.INT = 2;
QwertyParser.FLOAT = 3;
QwertyParser.CHAR = 4;
QwertyParser.STRING = 5;
QwertyParser.BOOLEAN = 6;
QwertyParser.IF = 7;
QwertyParser.ELSE_IF = 8;
QwertyParser.ELSE = 9;
QwertyParser.FOR = 10;
QwertyParser.WHILE = 11;
QwertyParser.DO = 12;
QwertyParser.PRINT = 13;
QwertyParser.PRINTLN = 14;
QwertyParser.SCAN = 15;
QwertyParser.OPEN_PAR = 16;
QwertyParser.CLOSE_PAR = 17;
QwertyParser.OPEN_BRACE = 18;
QwertyParser.CLOSE_BRACE = 19;
QwertyParser.OPEN_BRACKET = 20;
QwertyParser.CLOSE_BRACKET = 21;
QwertyParser.ENUMERATION = 22;
QwertyParser.END = 23;
QwertyParser.COMMENT = 24;
QwertyParser.LINE_COMMENT = 25;
QwertyParser.ADD = 26;
QwertyParser.SUB = 27;
QwertyParser.MUL = 28;
QwertyParser.DIV = 29;
QwertyParser.ADD_ASSIGN = 30;
QwertyParser.SUB_ASSIGN = 31;
QwertyParser.MUL_ASSIGN = 32;
QwertyParser.DIV_ASSIGN = 33;
QwertyParser.MOD_ASSIGN = 34;
QwertyParser.MOD = 35;
QwertyParser.LT = 36;
QwertyParser.LE = 37;
QwertyParser.GT = 38;
QwertyParser.GE = 39;
QwertyParser.EQUAL = 40;
QwertyParser.NOTEQUAL = 41;
QwertyParser.INC = 42;
QwertyParser.DEC = 43;
QwertyParser.ASSIGN = 44;
QwertyParser.AND = 45;
QwertyParser.OR = 46;
QwertyParser.NOT = 47;
QwertyParser.CONSTANT_KEYWORD = 48;
QwertyParser.MAIN_FUNC = 49;
QwertyParser.RETURN = 50;
QwertyParser.VOID = 51;
QwertyParser.INTEGER_LITERAL = 52;
QwertyParser.FLOAT_LITERAL = 53;
QwertyParser.CHAR_LITERAL = 54;
QwertyParser.STRING_LITERAL = 55;
QwertyParser.BOOLEAN_LITERAL = 56;
QwertyParser.VARIABLE_IDENTIFIER = 57;
QwertyParser.FUNCTION_IDENTIFIER = 58;
QwertyParser.OR_OPE = 59;

QwertyParser.RULE_program = 0;
QwertyParser.RULE_statement = 1;
QwertyParser.RULE_vardecl_list = 2;
QwertyParser.RULE_var_decl = 3;
QwertyParser.RULE_var_identifier_list = 4;
QwertyParser.RULE_array_size = 5;
QwertyParser.RULE_data_type = 6;
QwertyParser.RULE_function_declaration = 7;
QwertyParser.RULE_function_return = 8;
QwertyParser.RULE_function_noreturn = 9;
QwertyParser.RULE_parameters = 10;
QwertyParser.RULE_function_block = 11;
QwertyParser.RULE_main_function = 12;
QwertyParser.RULE_expression = 13;
QwertyParser.RULE_string_expression = 14;
QwertyParser.RULE_num_expression = 15;
QwertyParser.RULE_num_ope = 16;
QwertyParser.RULE_unary_ope = 17;
QwertyParser.RULE_num_factor = 18;
QwertyParser.RULE_var_func_expression = 19;
QwertyParser.RULE_var_func_factor = 20;
QwertyParser.RULE_bool_expression = 21;
QwertyParser.RULE_relational_ope = 22;
QwertyParser.RULE_logical_ope = 23;
QwertyParser.RULE_const_statement = 24;
QwertyParser.RULE_var_assignment_statement = 25;
QwertyParser.RULE_assignment_statement = 26;
QwertyParser.RULE_assignment_num_ope = 27;
QwertyParser.RULE_assignment_factor = 28;
QwertyParser.RULE_funccall_statement = 29;
QwertyParser.RULE_actual_parameter_list = 30;
QwertyParser.RULE_actual_params = 31;
QwertyParser.RULE_conditional_factor = 32;
QwertyParser.RULE_if_statement = 33;
QwertyParser.RULE_conditional_block = 34;
QwertyParser.RULE_code_block = 35;
QwertyParser.RULE_while_statement = 36;
QwertyParser.RULE_do_while_statement = 37;
QwertyParser.RULE_for_statement = 38;
QwertyParser.RULE_return_statement = 39;
QwertyParser.RULE_scan_statement = 40;
QwertyParser.RULE_print_statement = 41;

function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QwertyParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.main_function = function() {
    return this.getTypedRuleContext(Main_functionContext,0);
};

ProgramContext.prototype.EOF = function() {
    return this.getToken(QwertyParser.EOF, 0);
};

ProgramContext.prototype.function_declaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Function_declarationContext);
    } else {
        return this.getTypedRuleContext(Function_declarationContext,i);
    }
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof QwertyListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof QwertyListener ) {
        listener.exitProgram(this);
	}
};

ProgramContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QwertyVisitor ) {
        return visitor.visitProgram(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QwertyParser.ProgramContext = ProgramContext;

QwertyParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, QwertyParser.RULE_program);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 87;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 84;
                this.function_declaration(); 
            }
            this.state = 89;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
        }

        this.state = 90;
        this.main_function();
        this.state = 91;
        this.match(QwertyParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QwertyParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.vardecl_list = function() {
    return this.getTypedRuleContext(Vardecl_listContext,0);
};

StatementContext.prototype.const_statement = function() {
    return this.getTypedRuleContext(Const_statementContext,0);
};

StatementContext.prototype.END = function() {
    return this.getToken(QwertyParser.END, 0);
};

StatementContext.prototype.assignment_statement = function() {
    return this.getTypedRuleContext(Assignment_statementContext,0);
};

StatementContext.prototype.funccall_statement = function() {
    return this.getTypedRuleContext(Funccall_statementContext,0);
};

StatementContext.prototype.if_statement = function() {
    return this.getTypedRuleContext(If_statementContext,0);
};

StatementContext.prototype.while_statement = function() {
    return this.getTypedRuleContext(While_statementContext,0);
};

StatementContext.prototype.do_while_statement = function() {
    return this.getTypedRuleContext(Do_while_statementContext,0);
};

StatementContext.prototype.for_statement = function() {
    return this.getTypedRuleContext(For_statementContext,0);
};

StatementContext.prototype.return_statement = function() {
    return this.getTypedRuleContext(Return_statementContext,0);
};

StatementContext.prototype.scan_statement = function() {
    return this.getTypedRuleContext(Scan_statementContext,0);
};

StatementContext.prototype.print_statement = function() {
    return this.getTypedRuleContext(Print_statementContext,0);
};

StatementContext.prototype.COMMENT = function() {
    return this.getToken(QwertyParser.COMMENT, 0);
};

StatementContext.prototype.LINE_COMMENT = function() {
    return this.getToken(QwertyParser.LINE_COMMENT, 0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof QwertyListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof QwertyListener ) {
        listener.exitStatement(this);
	}
};

StatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QwertyVisitor ) {
        return visitor.visitStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QwertyParser.StatementContext = StatementContext;

QwertyParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, QwertyParser.RULE_statement);
    try {
        this.state = 127;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 93;
            this.vardecl_list();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 94;
            this.const_statement();
            this.state = 95;
            this.match(QwertyParser.END);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 97;
            this.const_statement();
            notifyErrorListeners("Insert ';' to complete statement.");
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 100;
            this.assignment_statement();
            this.state = 101;
            this.match(QwertyParser.END);
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 103;
            this.funccall_statement();
            this.state = 104;
            this.match(QwertyParser.END);
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 106;
            this.if_statement();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 107;
            this.while_statement();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 108;
            this.do_while_statement();
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 109;
            this.for_statement();
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 110;
            this.return_statement();
            this.state = 111;
            this.match(QwertyParser.END);
            break;

        case 11:
            this.enterOuterAlt(localctx, 11);
            this.state = 113;
            this.scan_statement();
            this.state = 114;
            this.match(QwertyParser.END);
            break;

        case 12:
            this.enterOuterAlt(localctx, 12);
            this.state = 116;
            this.scan_statement();
            notifyErrorListeners("Insert ';' to complete statement.");
            break;

        case 13:
            this.enterOuterAlt(localctx, 13);
            this.state = 119;
            this.print_statement();
            this.state = 120;
            this.match(QwertyParser.END);
            break;

        case 14:
            this.enterOuterAlt(localctx, 14);
            this.state = 122;
            this.print_statement();
            notifyErrorListeners("Insert ';' to complete statement.");
            break;

        case 15:
            this.enterOuterAlt(localctx, 15);
            this.state = 125;
            this.match(QwertyParser.COMMENT);
            break;

        case 16:
            this.enterOuterAlt(localctx, 16);
            this.state = 126;
            this.match(QwertyParser.LINE_COMMENT);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Vardecl_listContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QwertyParser.RULE_vardecl_list;
    return this;
}

Vardecl_listContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Vardecl_listContext.prototype.constructor = Vardecl_listContext;

Vardecl_listContext.prototype.var_decl = function() {
    return this.getTypedRuleContext(Var_declContext,0);
};

Vardecl_listContext.prototype.END = function() {
    return this.getToken(QwertyParser.END, 0);
};

Vardecl_listContext.prototype.vardecl_list = function() {
    return this.getTypedRuleContext(Vardecl_listContext,0);
};

Vardecl_listContext.prototype.enterRule = function(listener) {
    if(listener instanceof QwertyListener ) {
        listener.enterVardecl_list(this);
	}
};

Vardecl_listContext.prototype.exitRule = function(listener) {
    if(listener instanceof QwertyListener ) {
        listener.exitVardecl_list(this);
	}
};

Vardecl_listContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QwertyVisitor ) {
        return visitor.visitVardecl_list(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QwertyParser.Vardecl_listContext = Vardecl_listContext;

QwertyParser.prototype.vardecl_list = function() {

    var localctx = new Vardecl_listContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, QwertyParser.RULE_vardecl_list);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 129;
        this.var_decl();
        this.state = 130;
        this.match(QwertyParser.END);
        this.state = 132;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        if(la_===1) {
            this.state = 131;
            this.vardecl_list();

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Var_declContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QwertyParser.RULE_var_decl;
    return this;
}

Var_declContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Var_declContext.prototype.constructor = Var_declContext;

Var_declContext.prototype.data_type = function() {
    return this.getTypedRuleContext(Data_typeContext,0);
};

Var_declContext.prototype.var_identifier_list = function() {
    return this.getTypedRuleContext(Var_identifier_listContext,0);
};

Var_declContext.prototype.array_size = function() {
    return this.getTypedRuleContext(Array_sizeContext,0);
};

Var_declContext.prototype.enterRule = function(listener) {
    if(listener instanceof QwertyListener ) {
        listener.enterVar_decl(this);
	}
};

Var_declContext.prototype.exitRule = function(listener) {
    if(listener instanceof QwertyListener ) {
        listener.exitVar_decl(this);
	}
};

Var_declContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QwertyVisitor ) {
        return visitor.visitVar_decl(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QwertyParser.Var_declContext = Var_declContext;

QwertyParser.prototype.var_decl = function() {

    var localctx = new Var_declContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, QwertyParser.RULE_var_decl);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 134;
        this.data_type();
        this.state = 136;
        _la = this._input.LA(1);
        if(_la===QwertyParser.INTEGER_LITERAL) {
            this.state = 135;
            this.array_size();
        }

        this.state = 138;
        this.var_identifier_list();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Var_identifier_listContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QwertyParser.RULE_var_identifier_list;
    return this;
}

Var_identifier_listContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Var_identifier_listContext.prototype.constructor = Var_identifier_listContext;

Var_identifier_listContext.prototype.VARIABLE_IDENTIFIER = function() {
    return this.getToken(QwertyParser.VARIABLE_IDENTIFIER, 0);
};

Var_identifier_listContext.prototype.ENUMERATION = function() {
    return this.getToken(QwertyParser.ENUMERATION, 0);
};

Var_identifier_listContext.prototype.var_assignment_statement = function() {
    return this.getTypedRuleContext(Var_assignment_statementContext,0);
};

Var_identifier_listContext.prototype.var_identifier_list = function() {
    return this.getTypedRuleContext(Var_identifier_listContext,0);
};

Var_identifier_listContext.prototype.enterRule = function(listener) {
    if(listener instanceof QwertyListener ) {
        listener.enterVar_identifier_list(this);
	}
};

Var_identifier_listContext.prototype.exitRule = function(listener) {
    if(listener instanceof QwertyListener ) {
        listener.exitVar_identifier_list(this);
	}
};

Var_identifier_listContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QwertyVisitor ) {
        return visitor.visitVar_identifier_list(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QwertyParser.Var_identifier_listContext = Var_identifier_listContext;

QwertyParser.prototype.var_identifier_list = function() {

    var localctx = new Var_identifier_listContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, QwertyParser.RULE_var_identifier_list);
    var _la = 0; // Token type
    try {
        this.state = 152;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 140;
            this.match(QwertyParser.VARIABLE_IDENTIFIER);
            this.state = 142;
            _la = this._input.LA(1);
            if(_la===QwertyParser.ASSIGN) {
                this.state = 141;
                this.var_assignment_statement();
            }

            this.state = 144;
            this.match(QwertyParser.ENUMERATION);
            this.state = 146;
            _la = this._input.LA(1);
            if(_la===QwertyParser.VARIABLE_IDENTIFIER) {
                this.state = 145;
                this.var_identifier_list();
            }

            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 148;
            this.match(QwertyParser.VARIABLE_IDENTIFIER);
            this.state = 150;
            _la = this._input.LA(1);
            if(_la===QwertyParser.ASSIGN) {
                this.state = 149;
                this.var_assignment_statement();
            }

            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Array_sizeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = QwertyParser.RULE_array_size;
    return this;
}

Array_sizeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Array_sizeContext.prototype.constructor = Array_sizeContext;

Array_sizeContext.prototype.INTEGER_LITERAL = function() {
    return this.getToken(QwertyParser.INTEGER_LITERAL, 0);
};

Array_sizeContext.prototype.enterRule = function(listener) {
    if(listener instanceof QwertyListener ) {
        listener.enterArray_size(this);
	}
};

Array_sizeContext.prototype.exitRule = function(listener) {
    if(listener instanceof QwertyListener ) {
        listener.exitArray_size(this);
	}
};

Array_sizeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof QwertyVisitor ) {
        return visitor.visitArray_size(this);
    } else {
        return visitor.visitChildren(this);
    }
};




QwertyParser.Array_sizeContext = Array_sizeContext;

QwertyParser.prototype.array_size = function() {

    var localctx = new Array_sizeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, QwertyParser.RULE_array_size);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 154;
        this.match(QwertyParser.INTEGER_LITERAL);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};
